--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-    background: 50% 50% / cover url(http://localhost:3000/bg.png);
+    background: 50% 50% / cover url(http://47.106.66.80/bg.png);
 }
 
 input, textarea {
